# tfg

./: .dockerignore  .gitignore  404.html  LICENSE  README.md  database.db  docker-compose.yml  fly.toml  index.html  main-PXG3GUII.js  main-WQZ7DHZT.js  pyproject.toml  requirements.txt  styles-EAQ76QEY.css
backend/: Dockerfile  database.py  main.py  models.py  schemas.py
backend/auth/: __init__.py  dependencies.py  firebase.py
backend/routes/: recommendation.py
backend/services/: recommender.py
docs/: memoria.tex
frontend/: .dockerignore  Dockerfile  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts
frontend/src/app/auth/: auth.guard.ts  auth.interceptor.ts  auth.service.ts
frontend/src/app/i18n/: translate.pipe.ts  translation.service.ts  translations.ts
frontend/src/app/i18n/language-selector/: language-selector.css  language-selector.html  language-selector.ts
frontend/src/app/pages/about-us/: about-us.css  about-us.html  about-us.ts
frontend/src/app/pages/contact/: contact.html  contact.ts
frontend/src/app/pages/form/: form.css  form.html  form.ts
frontend/src/app/pages/home/: home.css  home.html  home.ts
frontend/src/app/pages/login/: login.css  login.html  login.ts
frontend/src/app/pages/random/: random.css  random.html  random.ts
frontend/src/app/pages/results/: results.css  results.ts  (+1 more)
frontend/src/app/services/: recommendation.service.ts
frontend/src/environments/: environment.production.ts  environment.ts
k6/: stress_test.js
