[project]
name = "tfg-backend"
version = "0.1.0"
description = "Backend API for TFG recommender"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.135.1",
    "openai==2.26.0",
    "python-dotenv==1.1.1",
    "sqlmodel==0.0.37",
    "uvicorn==0.41.0",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
